docs: improve README.md
